# qdslm1

./: .gitignore  README.md  README.rst  conf.py  index.rst  requirements.txt  setup.cfg  setup.py
inspiration/sucky-tf-tutorial/: tutorial.ipynb
inspiration/tf-text-classification/: text_classification.ipynb
inspiration/tf-text-rnn/: text_classification_rnn.ipynb  text_classification_rnn.ipynb:Zone.Identifier
src/qdslm1/: model.py
