[metadata]
name = <package-name>
version = 0.1.0
license = WTFPL
description = Sentiment Analysis Model for SMS
long_description = file: README.rst
author = Julian Joaquin
classifiers=
   Development Status :: 1 - Planning
   Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.2
   Framework :: Matplotlib
   Intended Audience :: Other Audience
   License :: Public Domain

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =

[options.packages.find]
where=src